[gd_scene load_steps=6 format=2]

[ext_resource path="res://timecircuits/timecircuit.tscn" type="PackedScene" id=1]
[ext_resource path="res://duvet/ui.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://selected.png" type="Texture" id=4]
[ext_resource path="res://duvet/keysim.gd" type="Script" id=5]

[node name="Control" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 34.0

[node name="Timecircuit" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0

[node name="HBoxContainer" type="HSplitContainer" parent="."]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 713.0
margin_bottom = 562.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 706.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 706.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="indicatorHope" type="TextureRect" parent="HBoxContainer/PanelContainer/CenterContainer"]
margin_left = 333.0
margin_top = 258.0
margin_right = 365.0
margin_bottom = 290.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="PanelContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 725.0
margin_right = 1024.0
margin_bottom = 562.0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer2"]
margin_right = 299.0
margin_bottom = 405.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/PanelContainer2/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 292.0
margin_bottom = 398.0

[node name="Pixel History" type="ItemList" parent="HBoxContainer/PanelContainer2/PanelContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="User History" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -137.0
margin_bottom = -301.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/PanelContainer/TabContainer/User History"]
margin_right = 113.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer2/PanelContainer/TabContainer/User History/HBoxContainer"]
margin_right = 60.0
margin_bottom = 14.0
text = "Tracking: "

[node name="UserHistoryLabel" type="Label" parent="HBoxContainer/PanelContainer2/PanelContainer/TabContainer/User History/HBoxContainer"]
margin_left = 64.0
margin_right = 113.0
margin_bottom = 14.0
text = "Nobody"

[node name="Button" type="Button" parent="HBoxContainer/PanelContainer2/PanelContainer/TabContainer/User History"]
margin_top = 18.0
margin_right = 113.0
margin_bottom = 38.0
text = "Update"

[node name="UserHistoryList" type="ItemList" parent="HBoxContainer/PanelContainer2/PanelContainer/TabContainer/User History"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer/PanelContainer2"]
margin_top = 409.0
margin_right = 299.0
margin_bottom = 562.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 292.0
margin_bottom = 146.0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer"]
margin_right = 285.0
margin_bottom = 93.0

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 278.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Control" type="Control" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer"]
margin_right = 87.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Control2" type="Button" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer"]
margin_left = 91.0
margin_right = 178.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "^"

[node name="Control3" type="Control" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer"]
margin_left = 182.0
margin_right = 269.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Control4" type="Button" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer"]
margin_top = 24.0
margin_right = 87.0
margin_bottom = 55.0
text = "<"

[node name="Control5" type="Label" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer"]
margin_left = 91.0
margin_top = 24.0
margin_right = 178.0
margin_bottom = 55.0
focus_mode = 2
mouse_filter = 1
text = "CLICK
HERE"
align = 1
script = ExtResource( 5 )
base_path = NodePath("../../../../../../..")

[node name="Control6" type="Button" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer"]
margin_left = 182.0
margin_top = 24.0
margin_right = 269.0
margin_bottom = 55.0
text = ">"

[node name="Control7" type="Control" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer"]
margin_top = 59.0
margin_right = 87.0
margin_bottom = 79.0

[node name="Control8" type="Button" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer"]
margin_left = 91.0
margin_top = 59.0
margin_right = 178.0
margin_bottom = 79.0
text = "v"

[node name="Button" type="Button" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer"]
margin_left = 182.0
margin_top = 59.0
margin_right = 269.0
margin_bottom = 79.0
text = "EXPORT"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer"]
margin_top = 97.0
margin_right = 285.0
margin_bottom = 139.0
columns = 2

[node name="clabel" type="Label" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/GridContainer"]
margin_right = 185.0
margin_bottom = 14.0
text = "Coordinates Of Selected Tile:"

[node name="Coordinates" type="Label" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/GridContainer"]
margin_left = 189.0
margin_right = 285.0
margin_bottom = 14.0

[node name="IBSACb" type="CheckBox" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 185.0
margin_bottom = 42.0
text = "Same Author In Yellow"

[node name="TCCb" type="CheckBox" parent="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/GridContainer"]
margin_left = 189.0
margin_top = 18.0
margin_right = 285.0
margin_bottom = 42.0
text = "Truecolour"
[connection signal="pressed" from="HBoxContainer/PanelContainer2/PanelContainer/TabContainer/User History/Button" to="." method="_setup_user_history"]
[connection signal="pressed" from="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer/Control2" to="." method="_fine_up"]
[connection signal="pressed" from="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer/Control4" to="." method="_fine_left"]
[connection signal="pressed" from="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer/Control6" to="." method="_fine_right"]
[connection signal="pressed" from="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer/Control8" to="." method="_fine_down"]
[connection signal="pressed" from="HBoxContainer/PanelContainer2/PanelContainer2/VBoxContainer/PanelContainer/GridContainer/Button" to="." method="_on_export"]
